# MaaWuWaX

./: .gitignore  .gitmodules  AGENTS.md  README.md
.github/workflows/: check.yml  install.yml
agent/cpp-algo/: CMakeLists.txt  CMakeLists_direct.txt  README.md
agent/cpp-algo/source/: CMakeLists.txt  main.cpp
agent/cpp-algo/source/Common/: FramelessWindow.cpp  FramelessWindow.h  ParentProcessWatcher.cpp  ParentProcessWatcher.h  WebView2.cpp  WebView2.h
agent/cpp-algo/source/EchoDetect/: echo_detect.cpp  echo_detect.h
agent/cpp-algo/source/FarmMap/: FarmMapWalkStep.cpp  FarmMapWalkStep.h
agent/cpp-algo/source/MapLocator/: MapAlgorithm.cpp  MapAlgorithm.h  MapLocator.cpp  MapLocator.h  MapTypes.h  MatchStrategy.cpp  MatchStrategy.h  MotionTracker.cpp  MotionTracker.h  YoloPredictor.cpp
agent/cpp-algo/source/MapNavigator/: MapNavigator.cpp  MapNavigator.h  MapNavigatorCompatible.cpp  MapNavigatorCompatible.h  action_executor.cpp  controller_info_utils.cpp  controller_info_utils.h  motion_controller.cpp  navi_controller.h  navi_domain_types.h  navi_param_parser.cpp  navi_param_parser.h  position_provider.cpp  position_provider.h  route_tracker.cpp  route_tracker.h  semantic_nodes.h  steering_controller.cpp  steering_controller.h
agent/cpp-algo/source/MapNavigator/Backend/: backend.cpp
agent/cpp-algo/source/MapNavigator/Backend/Adb/: adb_camera_swipe_driver.cpp  adb_camera_swipe_driver.h  adb_zone_guard.cpp  adb_zone_guard.h
agent/cpp-algo/source/MapNavigator/Backend/Desktop/: desktop_input_backend.cpp  desktop_input_backend.h
agent/cpp-algo/source/MapNavigator/Backend/WlRoots/: wlroots_input_backend.cpp
agent/cpp-algo/source/Navmesh/: BaseNavGeometry.cpp  BaseNavGeometry.h  BaseNavPack.cpp  BaseNavPack.h  BaseNavReader.cpp  BaseNavReader.h  NavmeshTypes.h
agent/cpp-algo/source/RealTimeTask/: RealTimeTaskAction.cpp
agent/cpp-algo/source/RecoGrid/: CellMask.cpp  CellMask.h  GridAlignment.cpp  GridAlignment.h  GridClassifier.cpp  GridDetector.cpp  GridDetector.h  GridGeometry.h  GridMatcher.cpp  GridMatcher.h  GridRecognizer.cpp  GridRecognizer.h  PHashFilter.cpp  PHashFilter.h  README.md  RecoGridEngine.cpp  RecoGridEngine.h  RecoGridEngineTypes.h  RecoGridPlacement.cpp  RecoGridPlacement.h  RecoGridRecognition.cpp  RecoGridRecognition.h  RecoGridScanCells.cpp  RecoGridScanCells.h  RecoGridSession.cpp  RecoGridSession.h  RecoGridTransition.cpp  RecoGridTransition.h
agent/cpp-algo/source/Test/: test.cpp
agent/cpp-algo/source/WeaponInventoryScan/: WeaponInventoryScan.cpp  WeaponInventoryScan.h
agent/cpp-algo/source/my_reco_1/: my_reco_1.cpp
agent/go-service/: .gitignore  go.mod  go.sum  logger.go  main.go  register.go  stderr_darwin.go  stderr_other.go
agent/go-service/combat/: analyzer_metric.go  char_aemeath.go  char_augusta.go  char_baizhi.go  char_brant.go  char_calcharo.go  char_camellya.go  char_cantarella.go  char_carlotta.go  char_cartethyia.go  char_changli.go  char_chisa.go  char_chixia.go  char_ciaccona.go  char_danjin.go  char_default.go  char_denia.go  char_douling.go  char_encore.go  char_galbrena.go  char_havocrover.go  char_hiyuki.go  char_iuno.go  char_jianxin.go  char_jinhsi.go  char_jiyan.go  char_linnai.go  char_lucy.go  char_luhesi.go  char_lupa.go  char_mornye.go  char_mortefi.go  char_phoebe.go  char_phrolova.go  char_qiuyuan.go  char_rebecca.go  char_roccia.go  char_sanhua.go  char_shorekeeper.go  char_taoqi.go  (+14 more)
agent/go-service/daily/: daily.go  register.go
agent/go-service/diagnosis/: diagnosis.go  register.go
agent/go-service/dialogskip/: dialogskip.go  register.go
agent/go-service/domain/: domain.go  register.go
agent/go-service/echofarm/: echofarm.go  register.go
agent/go-service/echonhance/: enhance.go  register.go
assets/: interface.json
assets/icon/: MaaWuWaX.icns
assets/locales/: en_us.json  zh_cn.json
assets/tasks/: AutoCombat.json  AutoLogin.json  AutoPick.json  AutoRogue.json  ChangeEcho.json  DailyRoutine.json  Diagnosis.json  EchoFarm.json  EnhanceEcho.json  FarmBoss.json  FarmMap.json  FastTravel.json  FiveToOne.json  Forgery.json  MouseReset.json  MultiAccountDaily.json  NightmareNest.json  RealTime.json  Simulation.json  SkipDialog.json  Tacet.json
docs/zh_cn/: PLAN.md  architecture-refactor-report.md
maafw/: MaaNode.node  MaaNodeServer.node  MaaPiCli
tools/: build_and_install.py  configure.py  generate_macos_icon.py  generate_tray_icon.py  install.py  maadeps-download.py  remove_checker_bg.py  setup_workspace.py
(+169 files in other folders)
